--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -376,6 +376,7 @@ i {
   h1 {
     margin-top: 2rem;
     margin-bottom: 1.5rem;
+    color: #669966; /* custom */
   }
 
   p {
@@ -406,6 +407,25 @@ i {
   font-size: 1.08rem;
   margin-top: 2rem;
   overflow-wrap: break-word;
+
+  /* customs begin */
+  h1, h2, h3, h4, h5, h6 {
+    color: #669966;
+  }
+
+  .x-understand { color: #ccb833; }
+  .understand { color: #0099FF; }
+  .tab { white-space: pre; }
+  .underline { text-decoration: underline; }
+  .cancle { text-decoration: line-through; }
+  .green { color: #339966; }
+  .grey { color: #7f7f7f; }
+
+  code.language-plaintext.highlighter-rouge {
+    color: #1aaac7;
+    font-family: $font-family-codeblock;
+  }
+  /* customs end */
 
   a {
     &.popup {
