--- a/_sass/addon/variables.scss
+++ b/_sass/addon/variables.scss
@@ -23,5 +23,8 @@ $code-font-size: 0.85rem !default;
 
 /* fonts */
 
-$font-family-base: 'Source Sans Pro', 'Microsoft Yahei', sans-serif;
+$font-family-base: 'Console', 'Nanum Gothic', 'Source Sans Pro', 'Microsoft Yahei', sans-serif; /* custom */
 $font-family-heading: Lato, 'Microsoft Yahei', sans-serif;
+
+/* custom */
+$font-family-codeblock: 'Console', 'Nanum Gothic Coding', monospace;
