--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,3 +4,17 @@
 @import '{{ site.theme }}';
 
 /* append your custom style below */
+
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
+@font-face {
+    font-family: 'Console';
+    src: url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+}
+@font-face {
+    font-family: 'Console';
+    src: url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+    unicode-range: U+0041-005A, U+0061-007A, U+0030-0039;
+}
