폰트명 수정(Console -> Consolas), H1 색깔 변경

--- a/_sass/addon/variables.scss
+++ b/_sass/addon/variables.scss
@@ -23,8 +23,8 @@ $code-font-size: 0.85rem !default;
 
 /* fonts */
 
-$font-family-base: 'Console', 'Nanum Gothic', 'Source Sans Pro', 'Microsoft Yahei', sans-serif; /* custom */
+$font-family-base: 'Consolas', 'Nanum Gothic', 'Source Sans Pro', 'Microsoft Yahei', sans-serif; /* custom */
 $font-family-heading: Lato, 'Microsoft Yahei', sans-serif;
 
 /* custom */
-$font-family-codeblock: 'Console', 'Nanum Gothic Coding', monospace;
+$font-family-codeblock: 'Consolas', 'Nanum Gothic Coding', monospace;
