--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -376,7 +376,7 @@ i {
   h1 {
     margin-top: 2rem;
     margin-bottom: 1.5rem;
-    color: #669966; /* custom */
+    color: #84b2fd; /* custom */
   }
 
   p {
@@ -409,7 +409,7 @@ i {
   overflow-wrap: break-word;
 
   /* customs begin */
-  h1, h2, h3, h4, h5, h6 {
+  h2, h3, h4, h5, h6 {
     color: #669966;
   }
 
