--- a/_sass/addon/variables.scss
+++ b/_sass/addon/variables.scss
@@ -24,7 +24,7 @@ $code-font-size: 0.85rem !default;
 /* fonts */
 
 $font-family-base: 'Consolas', 'Nanum Gothic', 'Source Sans Pro', 'Microsoft Yahei', sans-serif; /* custom */
-$font-family-heading: Lato, 'Microsoft Yahei', sans-serif;
+$font-family-heading: 'Consolas', Lato, 'Microsoft Yahei', sans-serif;
 
 /* custom */
 $font-family-codeblock: 'Consolas', 'Nanum Gothic Coding', monospace;
