--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -409,7 +409,7 @@ i {
   overflow-wrap: break-word;
 
   /* customs begin */
-  h2, h3, h4, h5, h6 {
+  h1, h2, h3, h4, h5, h6 {
     color: #669966;
   }
 
