font-family-codeblock 수정

--- a/_sass/addon/variables.scss
+++ b/_sass/addon/variables.scss
@@ -27,4 +27,4 @@ $font-family-base: 'Console', 'Nanum Gothic', 'Source Sans Pro', 'Microsoft Yahe
 $font-family-heading: 'Console', Lato, 'Microsoft Yahei', sans-serif;
 
 /* custom */
-$font-family-codeblock: 'Console', 'JetBrains Mono', 'Nanum Gothic Coding', monospace;
+$font-family-codeblock: 'JetBrains Mono', 'Nanum Gothic Coding', monospace;
