--- a/_sass/addon/variables.scss
+++ b/_sass/addon/variables.scss
@@ -23,8 +23,8 @@ $code-font-size: 0.85rem !default;
 
 /* fonts */
 
-$font-family-base: 'Console', 'Nanum Gothic', 'Source Sans Pro', 'Microsoft Yahei', sans-serif; /* custom */
-$font-family-heading: 'Console', Lato, 'Microsoft Yahei', sans-serif;
+$font-family-base: 'Nanum Gothic', 'Source Sans Pro', 'Microsoft Yahei', sans-serif; /* custom */
+$font-family-heading: 'Nanum Gothic', Lato, 'Microsoft Yahei', sans-serif;
 
 /* custom */
-$font-family-codeblock: 'JetBrains Mono', 'Nanum Gothic Coding', monospace;
+$font-family-codeblock: 'Roboto Mono', 'JetBrains Mono', 'Nanum Gothic Coding', monospace;
