RSS 플러그인 추가

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@ layout: compress
 
 <!doctype html>
 
+<link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/feed.xml">
+
 {% include origin-type.html %}
 
 {% include lang.html %}
