--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,8 @@ tail_includes:
   - comments
 ---
 
+<link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/feed.xml">
+
 {% include lang.html %}
 
 <h1 data-toc-skip>{{ page.title }}</h1>
