--- a/_layouts/archives.html
+++ b/_layouts/archives.html
@@ -3,6 +3,8 @@ layout: page
 # The Archives of posts.
 ---
 
+<link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/feed.xml">
+
 {% include lang.html %}
 
 {% assign df_strftime_m = site.data.locales[lang].df.archives.strftime | default: '/ %m' %}
