--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -3,6 +3,8 @@ layout: page
 # The Category layout
 ---
 
+<link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/feed.xml">
+
 {% include lang.html %}
 
 <div id="page-category">
