--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -3,6 +3,8 @@ layout: page
 # The layout for Tag page
 ---
 
+<link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/feed.xml">
+
 {% include lang.html %}
 
 <div id="page-tag">
